--- a/src/component/index/css/index.less
+++ b/src/component/index/css/index.less
@@ -1,13 +1,34 @@
-.container {
-  a {
-    outline: none;
-    color: #f00;
-    display: block;
-    width: 100%;
-  }
+.myBlog-index-main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.myBlog-index-header {
+  position: absolute;
+  left: 0;
+  top: 0;
   img {
-    display: inline-block;
     width: 50px;
     height: 50px;
+    border-radius: 50%;
   }
+}
+.myBlog-animation-main {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+.myBlog-book-main {
+  background-image: url("../images/girl.jpg");
+}
+.myBlog-road-main {
+  background-image: url("../images/fox.jpeg");
+}
+.myBlog-galaxy-main {
+  background-image: url("../images/galaxy.jpg");
+}
+.myBlog-tree-main {
+  background-image: url("../images/tree.jpg");
 }
