--- a/src/component/index/css/index.less
+++ b/src/component/index/css/index.less
@@ -1,3 +1,4 @@
+/*  公用部分 */
 .myBlog-index-main {
   width: 100%;
   height: 100%;
@@ -20,6 +21,13 @@
   background-position: center center;
   background-size: cover;
 }
+
+/* Header */
+.myBlog-index-header {
+  color: #fff;
+}
+
+// 子页面
 .myBlog-book-main {
   background-image: url("../images/girl.jpg");
 }
