--- a/src/component/login/css/index.less
+++ b/src/component/login/css/index.less
@@ -87,11 +87,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  .myBlog-buttonAnimation-main {
+    width: 50%;
+  }
 }
 .myBlog-login-li {
   height: @thirty;
   line-height: @thirty;
-  width: 50%;
+  width: 100%;
   background-color: @blackColor;
   cursor: pointer;
   &:first-child {
