--- a/src/component/mouseAnimation/css/index.less
+++ b/src/component/mouseAnimation/css/index.less
@@ -1,7 +1,7 @@
 .myBlog-mouseAnimation-main {
   position: fixed;
   border-radius: 50%;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 1);
   transform-origin: center;
   transform: translate(-50%, -50%);
   animation-name: mouseAnimation;
