--- a/src/component/register/css/index.less
+++ b/src/component/register/css/index.less
@@ -56,7 +56,7 @@
   width: 15px;
   height: 15px;
   line-height: 12px;
-  background: #ddd;
+  background: rgba(221, 221, 221, 1);
   border-radius: 50%;
   cursor: pointer;
 }
